// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CategoryField > renders input with datalist 1`] = `
<div
  class="tw:w-full"
>
  <label
    class="tw:block tw:text-sm tw:font-medium tw:text-[var(--color-text-secondary)] tw:mb-2"
    for="category"
  >
    Category
  </label>
  <input
    class="tw:w-full tw:h-11 tw:px-4 tw:py-2 tw:bg-[var(--color-surface)] tw:border tw:border-[var(--color-border)] tw:rounded-lg tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30 tw:focus:border-[var(--color-border-strong)]"
    id="category"
    list="categories"
    name="category"
    type="text"
    value="testCategory"
  />
</div>
`;

exports[`CategoryField > renders when no category or categories given 1`] = `
<div
  class="tw:w-full"
>
  <label
    class="tw:block tw:text-sm tw:font-medium tw:text-[var(--color-text-secondary)] tw:mb-2"
    for="category"
  >
    Category
  </label>
  <input
    class="tw:w-full tw:h-11 tw:px-4 tw:py-2 tw:bg-[var(--color-surface)] tw:border tw:border-[var(--color-border)] tw:rounded-lg tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30 tw:focus:border-[var(--color-border-strong)]"
    id="category"
    list="categories"
    name="category"
    type="text"
    value=""
  />
</div>
`;
